Add text, link and title

--- a/app/src/style.scss
+++ b/app/src/style.scss
@@ -5,6 +5,9 @@
 // =====
 
 // Блоки
+@import 'blocks/text'; // Текстовый блок
+@import 'blocks/title'; // Заголовок
+@import 'blocks/link'; // Ссылка
 /* Blocks will be inserted here */
 // =====
 
