--- a/app/src/global/global.scss
+++ b/app/src/global/global.scss
@@ -1,16 +1,8 @@
 html {
   height: 100%;
-  font-size: 6px;
+  font-size: 8px;
 
   @include screen-sm() {
-    font-size: 7px;
-  }
-
-  @include screen-md() {
-    font-size: 8px;
-  }
-
-  @include screen-lg() {
     font-size: 9px;
   }
 
@@ -21,7 +13,7 @@ html {
 
 body {
   height: 100%;
-  font-size: 1.6rem;
+  font-size: 1.8rem;
   font-family: $font-main;
   color: $color-text;
   line-height: 1.5;
@@ -50,6 +42,26 @@ textarea {
   resize: none;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+
+  &:not([class]),
+  &[class=''] {
+    @extend %transition;
+    color: $color-main;
+    border-bottom: 1px solid currentColor;
+
+    &:hover {
+      color: $color-main-hover;
+    }
+
+    &:active {
+      color: $color-main-active;
+    }
+  }
+}
+
 hr {
   margin: 0;
 }
@@ -57,6 +69,12 @@ hr {
 img {
   max-width: 100%;
   height: auto;
+}
+
+.invert {
+  background: $color-text;
+  margin: 0 -1rem;
+  padding: 1rem;
 }
 
 ::selection {
