--- a/app/src/global/variables.scss
+++ b/app/src/global/variables.scss
@@ -1,8 +1,19 @@
 $color-main: #a10a62;
-$color-main-light: #f7e6f0;
+$color-main-hover: lighten($color-main, 10%);
+$color-main-active: darken($color-main, 10%);
+$color-main-light: #fdeaf6;
+
 $color-text: #424445;
+$color-text-hover: lighten($color-text, 20%);
+$color-text-active: darken($color-text, 20%);
+$color-text-light: #777;
 $color-text-dark: #2e2e2e;
-$color-light: #f2f2f2;
+
+$color-light: #e5e5e5;
+$color-lighter: #f2f2f2;
+$color-white: white;
+$color-white-hover: darken($color-white, 15%);
+$color-white-active: darken($color-white, 30%);
 
 $color-fb: #3b5998;
 $color-linkedin: #0a66c2;
@@ -15,13 +26,17 @@ $point-sm: 576px;
 $point-md: 768px;
 $point-lg: 992px;
 $point-xl: 1200px;
-$point-xl: 1600px;
+$point-xxl: 1600px;
 
 $font-main: 'Open Sans', sans-serif;
 
 $header-height: 100px;
 
 $duration: .3s;
+
+%transition {
+  transition: $duration ease;
+}
 
 // ----------------------------
 // МИКСИНЫ ДЛЯ ТЕКУЩЕГО ПРОЕКТА
