--- a/app/templates/pages/uikit.pug
+++ b/app/templates/pages/uikit.pug
@@ -52,3 +52,21 @@
       .title.title_size_lg .title.title_size_lg
     .mb-4
       .title.title_size_xl .title.title_size_xl
+
+  .mb-5
+    .mb-4
+      .btn .btn
+    .mb-4
+      a.btn(href='#') a.btn
+    .mb-4
+      input.btn(type='button' value='input.btn')
+    .mb-4
+      button.btn button.btn
+    .mb-4
+      a.btn.btn_primary(href='#') a.btn.btn_primary
+    .mb-4
+      .btn.btn_wide .btn.btn_wide
+    .mb-4
+      .btn.btn_size_lg .btn.btn_size_lg
+    .mb-4
+      button.btn.btn_disabled(disabled) button.btn.btn_disabled or [disabled]
