--- a/app/src/style.scss
+++ b/app/src/style.scss
@@ -8,6 +8,7 @@
 @import 'blocks/text'; // Текстовый блок
 @import 'blocks/title'; // Заголовок
 @import 'blocks/link'; // Ссылка
+@import 'blocks/btn'; // Кнопка
 /* Blocks will be inserted here */
 // =====
 
