--- a/app/src/style.scss
+++ b/app/src/style.scss
@@ -7,6 +7,7 @@
 // Блоки
 @import 'blocks/text'; // Текстовый блок
 @import 'blocks/title'; // Заголовок
+@import 'blocks/subtitle'; // Подзаголовок
 @import 'blocks/link'; // Ссылка
 @import 'blocks/btn'; // Кнопка
 /* Blocks will be inserted here */
