--- a/app/src/style.scss
+++ b/app/src/style.scss
@@ -9,6 +9,7 @@
 @import 'blocks/title'; // Заголовок
 @import 'blocks/subtitle'; // Подзаголовок
 @import 'blocks/link'; // Ссылка
+@import 'blocks/link-arrow'; // Ссылка со стрелкой
 @import 'blocks/btn'; // Кнопка
 /* Blocks will be inserted here */
 // =====
