--- a/app/templates/pages/uikit.pug
+++ b/app/templates/pages/uikit.pug
@@ -38,9 +38,6 @@ include ../components/social
     .mb-4
       a.link.link_line_none(href='#') .link.link_line_none
     .mb-4
-      .invert
-        a.link.link_color_white(href='#') .link.link_color_white
-    .mb-4
       a.link.link_color_text(href='#') .link.link_color_text
 
   .mb-5
@@ -76,7 +73,7 @@ include ../components/social
     .mb-4
       button.btn button.btn
     .mb-4
-      a.btn.btn_primary(href='#') a.btn.btn_primary
+      .btn.btn_primary .btn.btn_primary
     .mb-4
       .btn.btn_wide .btn.btn_wide
     .mb-4
