--- a/app/src/global/global.scss
+++ b/app/src/global/global.scss
@@ -70,6 +70,8 @@ strong {
 
 hr {
   margin: 0;
+  border: none;
+  border-bottom: 1px solid $color-text-light;
 }
 
 img {
@@ -85,6 +87,51 @@ img {
 
 .upper {
   text-transform: uppercase;
+}
+
+.nowrap {
+  white-space: nowrap;
+}
+
+.row-gap-5 {
+  margin-bottom: -3rem;
+
+  [class^='col'] {
+    margin-bottom: 3rem;
+  }
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-sm-left {
+
+  @include screen-sm() {
+    text-align: left;
+  }
+}
+
+.text-sm-right {
+
+  @include screen-sm() {
+    text-align: right;
+  }
+}
+
+.text-lg-right {
+
+  @include screen-lg() {
+    text-align: right;
+  }
+}
+
+.mb-6 {
+  margin-bottom: 4.5rem;
+}
+
+.mb-7 {
+  margin-bottom: 6rem;
 }
 
 ::selection {
