--- a/app/src/global/variables.scss
+++ b/app/src/global/variables.scss
@@ -9,6 +9,8 @@ $color-text-active: lighten($color-text, 30%);
 $color-text-light: #777;
 $color-text-dark: #2e2e2e;
 
+$color-gray: #ccc;
+
 $color-light: #e5e5e5;
 $color-lighter: #f2f2f2;
 $color-white: white;
