--- a/app/src/style.scss
+++ b/app/src/style.scss
@@ -12,6 +12,7 @@
 @import 'blocks/link-arrow'; // Ссылка со стрелкой
 @import 'blocks/btn'; // Кнопка
 @import 'blocks/social'; // Социальные иконки
+@import 'blocks/advantage'; // Блок с преимуществом
 /* Blocks will be inserted here */
 // =====
 
